--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: OBS Scheduler Configuration Editor
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+  An editor for OBS Scheduler's configuration files.
+domain: valdman.works
+baseurl: /obs-scheduler-config-editor # the subpath of your site, e.g. /blog
+url: https://valdman.works # the base hostname & protocol for your site, e.g. http://example.com
+github_username: edonv
 
 # Build settings
 theme: minima
