--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,7 @@ url: https://valdman.works # the base hostname & protocol for your site, e.g. ht
 
 # Build settings
 theme: minima
-plugins:
-  - jekyll-feed
+plugins: []
 
 # Exclude from processing.
 # The following items will not be processed, by default.
