--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ baseurl: /obs-scheduler-config-editor # the subpath of your site, e.g. /blog
 url: https://valdman.works # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
-theme: minima
+# theme: minima
 plugins: []
 
 # Exclude from processing.
