--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,10 @@ url: https://valdman.works # the base hostname & protocol for your site, e.g. ht
 # theme: minima
 plugins: []
 
+github:
+  # This property will hide the footer linking to the GitHub repo
+  private: true
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
